<resources>
    <string name="app_name">search_company</string>

    <string name="title_search_company">Rechercher une entreprise</string>

    <string name="name_company">%s</string>
    <string name="crated_date_company">Date de création : %s</string>
    <string name="address_company">localisée à l\' adresse : %s</string>
    <string name="first_activity_company">Activité principale : %s</string>
    <string name="category_company">Catégorie : %s</string>
    <string name="siren_company">Siren : %d</string>
    <string name="siret_company">Siret : %d</string>
    <string name="label_edit_text">Nom :</string>
    <string name="placeholder">Entrer le nom d\' une entreprise</string>
    <string name="text_radio_btn_cd_postal">Code postal</string>
    <string name="text_radio_btn_department">Département</string>
    <string name="btn_alert_dial_ok">OK</string>

</resources>